[package]
name = "mqtt-ws-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
futures-util = "0.3.28"
log = "0.4.20"
log4rs = "1.2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3.5"
rumqttc = { version = "0.22.0", features = ["use-rustls", "proxy", "url", "websocket"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
